--- a/EersteGitWebsite/index.html
+++ b/EersteGitWebsite/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitWebsiteMaarten</title>
 </head>
+<header>
+    <h1>
+        Mijn eerst GITWebsite
+    </h1>
+
+</header>
+
 <body>
-    
+<p>
+    Hier kan je mijn eerste gepubliceerde website met GitHub Pages terugvinden
+</p>    
 </body>
 </html>
