--- a/EersteGitWebsite/index.html
+++ b/EersteGitWebsite/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +15,13 @@
 </header>
 
 <body>
-<p>
-    Hier kan je mijn eerste gepubliceerde website met GitHub Pages terugvinden
-</p>    
+    <article>
+        <section>
+            <p>
+                Hier kan je mijn eerste gepubliceerde website met GitHub Pages terugvinden
+            </p>
+        </section>
+    </article>
 </body>
+
 </html>
