--- a/EersteGitWebsite/index.html
+++ b/EersteGitWebsite/index.html
@@ -22,6 +22,9 @@
             </p>
         </section>
     </article>
+    <footer>
+        <p>&copy Maarten Schryvers</p>
+    </footer>
 </body>
 
 </html>
